feat(api): 新增服务级 API Hook 框架并接入 Doris otel 建库
将 OTel→Doris 建库从 DAGExecutor 中的硬编码分支重构为通用的服务级
(API 侧) Hook 框架:声明位置、HookConfig/HookType 模型镜像 Worker 角色级
hook,DORIS service_ddl.json 顶层声明 POST_INSTALL/otelSchemaInit,由新增
的 ServiceHookDispatcher(Spring bean 自动收集 ServiceHook 实现)在 DAG
节点安装成功时按 action 分发,支持 SpEL condition。OtelSchemaOrchestrator/
OtelCredentialService 等既有建库逻辑不变,仅重接触发方式。

同时把 OTel→Doris 的 3 个 SQL 文件从 classpath 迁移到
package/raw/meta/datacluster-physical/DORIS/sql/,经 Nexus raw 仓库分发,
OtelSchemaApplier 改用 MetaStorage 读取。